--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 
 * {
@@ -6,55 +7,81 @@
   padding: 0;
   text-decoration: none;
   color: white;
-  font-family: "Oswald", sans-serif;
   box-sizing: border-box;
 }
 
 body {
   display: flex;
   justify-content: center;
-  margin: 20%;
+  margin: 10%;
+  background-color: lightgrey;
 }
 
+
 .V-card-container {
-  display: flex;
-  text-align: center;
-  background-color: black;
-  flex-direction: column;
-  align-content: center;
-  width: 20vw;
-  border-radius: 15px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    
+    position: relative;
+    text-align: center;
+    background: linear-gradient(#00e5ff,#b400fb);
+    flex-direction: column;
+    align-content: center;
+    width: 20vw;
+    border-radius: 25px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+      z-index: 6;
+      padding: 23px;
+
 }
+
+
+
+.V-card-container::after{
+    content:'';
+    position: absolute;
+    background: black;
+    inset: 5px;
+    border-radius: 5px;
+    z-index: -1;
+    border-radius: 25px;
+}
+
+
 
 
 
 img,
 .profile-image {
   display: flex;
-  height: 80%;
-  width: 90%;
+ height: 130px;
+ width: 130px;
   border-radius: 50%;
   justify-content: center;
   align-content: center;
   margin: auto;
-  margin-top: 4%;
+  margin-top: 3%;
 }
 
 p {
   color: grey;
   line-height: 1,2rem;
-  margin-top: 2%;
+  margin-top: 1%;
   margin-bottom: 4%;
   margin-left: 5%;
-  text-justify: initial;
+  text-align: center;
+  justify-content: center;
+  font-family: "Open Sans", sans-serif;
 }
+
+p:nth-child(5){
+    text-align: justify;
+}
+
+
 
 h2 {
   margin-top: 5%;
+  font-family: "Oswald", sans-serif;
 }
 
 button {
@@ -63,10 +90,14 @@ button {
   line-height: 1.5rem;
   justify-content: space-between;
   display: inline;
-  border-radius: 8px;
+  border-radius: 5px;
   font-size: 1rem;
   cursor: pointer;
   transition: transform 0.6s ease;
+  font-family: "Oswald", sans-serif;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-left: 5%;
 }
 
 button:nth-child(2) {
@@ -76,10 +107,4 @@ button:nth-child(2) {
 button:hover{
     transform: scale(1.1);
 }
-
-
-
-
-
-
 
