--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 * {
   margin: 0;
@@ -17,66 +16,57 @@ body {
   background-color: lightgrey;
 }
 
-
 .V-card-container {
-    position: relative;
-    text-align: center;
-    background: linear-gradient(#00e5ff,#b400fb);
-    flex-direction: column;
-    align-content: center;
-    width: 20vw;
-    border-radius: 25px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-      z-index: 6;
-      padding: 23px;
+  position: relative;
+  text-align: center;
+  background: linear-gradient(#00e5ff, #b400fb);
+  flex-direction: column;
+  align-content: center;
+  width: 20vw;
+  border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  z-index: 6;
+  padding: 23px;
 }
 
-
-
-.V-card-container::after{
-    content:'';
-    position: absolute;
-    background: black;
-    inset: 5px;
-    border-radius: 5px;
-    z-index: -1;
-    border-radius: 25px;
+.V-card-container::after {
+  content: "";
+  position: absolute;
+  background: #121212;
+  inset: 5px;
+  z-index: -1;
+  border-radius: 16px;
 }
-
-
-
-
 
 img,
 .profile-image {
   display: flex;
- height: 130px;
- width: 130px;
+  height: 130px;
+  width: 130px;
   border-radius: 50%;
   justify-content: center;
   align-content: center;
   margin: auto;
-  margin-top: 3%;
+  margin-top: 1%;
 }
 
 p {
   color: grey;
-  line-height: 1,2rem;
   margin-top: 1%;
   margin-bottom: 4%;
   margin-left: 5%;
   text-align: center;
   justify-content: center;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: 0.9rem;
+  letter-spacing: -1px;
 }
 
-p:nth-child(5){
-    text-align: justify;
+p:nth-child(5) {
+  text-align: justify;
 }
-
-
 
 h2 {
   margin-top: 5%;
@@ -96,16 +86,13 @@ button {
   font-family: "Oswald", sans-serif;
   margin-top: 5%;
   margin-bottom: 5%;
-  margin-left: 5%;
+  margin-left: 3%;
 }
 
 button:nth-child(2) {
   background-color: #28a745;
 }
 
-button:hover{
-    transform: scale(1.1);
+button:hover {
+  transform: scale(1.1);
 }
-
-
-
